--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
 
     <script src="http://platform.twitter.com/anywhere.js?id=e987tp9GDr1qsSEN5lMRA&v=1" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="/js/jquery.cookie.js"></script>
+    <script src="/static/js/jquery.cookie.js"></script>
     <script>
       $(function() {
         twttr.anywhere(function (T) {
