--- a/static/index.html
+++ b/static/index.html
@@ -33,7 +33,7 @@
                   $.get(
                     "/api/1/createSession",
                     {
-                      groupID: "g.W5vFlGzsOPUyuIlF",
+                      groupID: "g.QA0EsrfqmHLSeuWu",
                       authorID: response.authorID,
                       validUntil: (new Date().getTime() / 1000) + (60 * 60 * 24 * 365)
                     },
