--- a/static/index.html
+++ b/static/index.html
@@ -36,7 +36,7 @@
                     "/api/1/createSession",
                     {
                       groupID: "g.QA0EsrfqmHLSeuWu",
-                      authorID: response.authorID,
+                      authorID: response.data.authorID,
                       validUntil: (new Date().getTime() / 1000) + (60 * 60 * 24 * 365)
                     },
                     function(response) {
