--- a/static/index.html
+++ b/static/index.html
@@ -56,11 +56,27 @@
           });
         };
       });});
+      $("#create").click(function(event) {
+        event.preventDefault();
+        var name = $("#name").val();
+        $.get(
+          "/api/1/createGroupPad",
+          {
+            groupID: "g.QA0EsrfqmHLSeuWu",
+            padName: name
+          },
+          function() {
+            $(location).attr('href', '/p/name');
+          }
+        )
+      });
     </script>
   </head>
   <body>
     <div id="container">
       <div id="login"></div>
+      <input id="name" type="text" placeholder="Pad Name"></input>
+      <button id="create">Create</button>
     </div>
   </body>
 </html>
