fix redirect link

--- a/static/index.html
+++ b/static/index.html
@@ -66,7 +66,7 @@
             padName: name
           },
           function() {
-            $(location).attr('href', '/p/name');
+            $(location).attr('href', '/p/' + name);
           }
         )
       });
