add groupid to url

--- a/static/index.html
+++ b/static/index.html
@@ -65,7 +65,7 @@
               padName: name
             },
             function() {
-              $(location).attr('href', '/p/' + name);
+              $(location).attr('href', '/p/g.QA0EsrfqmHLSeuWu$' + name);
             }
           )
         });
