--- a/static/pad.html
+++ b/static/pad.html
@@ -278,6 +278,7 @@
         </script>
         
         <script src="http://platform.twitter.com/anywhere.js?id=e987tp9GDr1qsSEN5lMRA&v=1" type="text/javascript"></script>
+        <script src="/static/js/jquery.cookie.js"></script>
         <script>
           $(function() {
             twttr.anywhere(function (T) {
