link user avatar to pad listing

--- a/static/pad.html
+++ b/static/pad.html
@@ -52,7 +52,7 @@
                 </li>
             </ul>    
             <ul id="menu_right">
-                <li id="login"></li>
+                <li id="login" onClick="window.location = '/'"></li>
                 <li id="settingslink" onClick="window.pad&amp;&amp;pad.editbarClick('settings');return false;">
                     <a class="buttonicon buttonicon-settings" id="settingslink" title="Settings of this pad"></a>
                 </li>
